--- a/neuralJamAI/pyproject.toml
+++ b/neuralJamAI/pyproject.toml
@@ -8,4 +8,5 @@ dependencies = [
     "fastapi>=0.115.7",
     "langchain>=0.3.15",
     "langchain-mistralai>=0.2.4",
+    "python-dotenv>=1.0.1",
 ]
